--- a/anna-web2-hw-files-main/dev/scss/layout/_header.scss
+++ b/anna-web2-hw-files-main/dev/scss/layout/_header.scss
@@ -1,16 +1,11 @@
 /* =============
     Header
 ============= */
-header {
-
-
-    >div {
-
-
-        padding: 15px;
-        
-        img {
-            width: 120px;
-        }
+header{
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". header .";
+    >div{
+        grid-area: header;
     }
 }
