--- a/anna-web2-hw-files-main/dev/scss/helpers/_mixins.scss
+++ b/anna-web2-hw-files-main/dev/scss/helpers/_mixins.scss
@@ -144,8 +144,8 @@ html {
 // }
 
 
-@mixin xl-hero-2 {
-    @media (min-width: #{$screen-xl-hero-2-min}) {
+@mixin xxl {
+    @media (min-width: #{$screen-xxl-min}) {
         @content;
     }
 }
