--- a/anna-web2-hw-files-main/dev/scss/base/_base.scss
+++ b/anna-web2-hw-files-main/dev/scss/base/_base.scss
@@ -1,11 +1,16 @@
 /* =============
     Base
 ============= */
-ul{
-    margin: o;
-    padding: 0;
 
+ul{
+    margin: 0;
+    padding: 0;
     li{
         list-style: none;
     }
+}
+
+
+.hidden{
+    display: none;
 }
