--- a/anna-web2-hw-files-main/deploy/css/styles.css
+++ b/anna-web2-hw-files-main/deploy/css/styles.css
@@ -353,11 +353,15 @@ template {
     Base
 ============= */
 ul {
-  margin: o;
+  margin: 0;
   padding: 0;
 }
 ul li {
   list-style: none;
+}
+
+.hidden {
+  display: none;
 }
 
 /* =============
@@ -394,11 +398,13 @@ textarea {
 /* =============
     Header
 ============= */
-header > div {
-  padding: 15px;
+header {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". header .";
 }
-header > div img {
-  width: 120px;
+header > div {
+  grid-area: header;
 }
 
 /* =============
@@ -409,18 +415,66 @@ footer {
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". footer .";
 }
+@media (min-width: 1200px) {
+  footer {
+    grid-template-columns: auto 1200px auto;
+  }
+}
 footer > div {
   grid-area: footer;
+}
+@media (min-width: 768px) {
+  footer > div {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas: "f1 f2" "f1 f3";
+    gap: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  footer > div {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas: "f1 f2 f3";
+  }
+}
+@media (min-width: 768px) {
+  footer > div #f1 {
+    grid-area: f1;
+  }
+}
+@media (min-width: 768px) {
+  footer > div #f2 {
+    grid-area: f2;
+  }
+}
+@media (min-width: 768px) {
+  footer > div #f3 {
+    grid-area: f3;
+  }
 }
 
 /* =============
     Search
 ============= */
-#search > div {
-  padding: 15px;
+#search {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". search .";
 }
-#search > div img {
-  width: 120px;
+#search > div {
+  grid-area: search;
+}
+@media (min-width: 1200px) {
+  #search > div {
+    display: grid;
+    grid-template-columns: auto 1200px auto;
+    grid-template-areas: ". search-content .";
+  }
+}
+@media (min-width: 1200px) and (min-width: 1200px) {
+  #search > div form {
+    grid-area: search-content;
+  }
 }
 
 /*==========
@@ -456,74 +510,134 @@ HERO
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". planning .";
 }
+@media (min-width: 1200px) {
+  #planning {
+    grid-template-columns: auto 1000px auto;
+  }
+}
 #planning > div {
   grid-area: planning;
 }
-
+@media (min-width: 768px) {
+  #planning > div ul {
+    display: grid;
+    grid-template-columns: 50% auto;
+    gap: 16px;
+  }
+}
 /* =============
     Hero-2
 ============= */
-#hero-2 {
-  display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". hero-2 .";
-}
 @media (min-width: 1200px) {
   #hero-2 {
-    grid-template-columns: auto 1200px auto;
+    display: grid;
+    grid-template-columns: auto 1350px auto;
+    grid-template-areas: ". hero-2 .";
   }
 }
-#hero-2 > div {
-  grid-area: hero-2;
-}
-#hero-2 > div ul {
-  display: grid;
-  gap: 16px;
-  grid-template-areas: "hero-2-1" "hero-2-2" "hero-2-3";
-}
 @media (min-width: 768px) {
-  #hero-2 > div ul {
-    grid-template-areas: "hero-2-1 hero-2-1" "hero-2-2 hero-2-3";
+  #hero-2 ul {
+    display: grid;
     grid-template-columns: 50% auto;
   }
 }
-@media (min-width: 1024px) {
-  #hero-2 > div ul {
-    grid-template-areas: "hero-2-1 hero-2-2" "hero-2-1 hero-2-3";
-    grid-template-columns: repeat(3, 1fr);
+@media (min-width: 1200px) {
+  #hero-2 ul {
+    grid-template-columns: 70% auto;
+    grid-template-areas: "h2-1 h2-2" "h2-1 h2-3";
   }
 }
-#hero-2 > div ul li img {
+@media (min-width: 1200px) {
+  #hero-2 ul {
+    grid-area: hero-2;
+  }
+}
+#hero-2 ul li img {
   width: 100%;
 }
-#hero-2 > div ul #hero-2-1 {
-  grid-area: hero-2-1;
+@media (min-width: 1200px) {
+  #hero-2 ul #h2-1 {
+    grid-area: h2-1;
+  }
 }
-#hero-2 > div ul #hero-2-2 {
-  grid-area: hero-2-2;
+@media (min-width: 1200px) {
+  #hero-2 ul #h2-2 {
+    grid-area: h2-2;
+  }
 }
-#hero-2 > div ul #hero-2-3 {
-  grid-area: hero-2-3;
+@media (min-width: 1200px) {
+  #hero-2 ul #h2-3 {
+    grid-area: h2-3;
+  }
 }
 
 /* =============
     New
 ============= */
-#new {
-  display: grid;
-  grid-template-columns: 16px auto 16px;
-  grid-template-areas: ". new .";
+@media (min-width: 768px) {
+  #new {
+    display: grid;
+    grid-template-columns: 16px auto 16px;
+    grid-template-areas: ". new .";
+  }
 }
 @media (min-width: 1024px) {
   #new {
-    grid-template-columns: auto 60% auto;
+    grid-template-columns: auto 1024px auto;
   }
 }
-@media (min-width: 1200px) {
-  #new {
-    grid-template-columns: auto 800px auto;
+@media (min-width: 768px) {
+  #new > div {
+    grid-area: new;
   }
 }
-#new > div {
-  grid-area: new;
+@media (min-width: 768px) {
+  #new > div ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: "n1 n1 n2 n2" "n3 n3 n4 n4" ". n5 n5 .";
+    gap: 16px;
+  }
+}
+@media (min-width: 1024px) {
+  #new > div ul {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-areas: "n1 n1 n2 n2 n3 n3" ". n4 n4 n5 n5 .";
+  }
+}
+#new > div ul li img {
+  width: 100%;
+}
+#new > div ul li section {
+  display: grid;
+  grid-template-columns: 16px auto 16px;
+  grid-template-areas: ". new-content .";
+}
+#new > div ul li section > div {
+  grid-area: new-content;
+}
+@media (min-width: 768px) {
+  #new > div ul #n1 {
+    grid-area: n1;
+  }
+}
+@media (min-width: 768px) {
+  #new > div ul #n2 {
+    grid-area: n2;
+  }
+}
+@media (min-width: 768px) {
+  #new > div ul #n3 {
+    grid-area: n3;
+  }
+}
+@media (min-width: 768px) {
+  #new > div ul #n4 {
+    grid-area: n4;
+  }
+}
+@media (min-width: 768px) {
+  #new > div ul #n5 {
+    grid-area: n5;
+  }
 }
