--- a/anna-web2-hw-files-main/dev/scss/sections/_hero-2.scss
+++ b/anna-web2-hw-files-main/dev/scss/sections/_hero-2.scss
@@ -3,7 +3,7 @@
 ============= */
 #hero-2{
 
-    @include xxl{
+    @include xl{
         display: grid;
         grid-template-columns: auto 1350px auto;
         grid-template-areas: ". hero-2 .";
@@ -21,7 +21,7 @@
                                  "h2-1 h2-3";
         }
 
-        @include xxl{
+        @include xl{
             grid-area: hero-2;
         }
 
