--- a/anna-web2-hw-files-main/dev/scss/helpers/_variables.scss
+++ b/anna-web2-hw-files-main/dev/scss/helpers/_variables.scss
@@ -16,7 +16,7 @@ $screen-lg-min: 1024px;
 $screen-xl-min: 1200px;
 
 // Large desktops
-$screen-xl-hero-2-min: 1350px;
+$screen-xxl-min: 1350px;
 
 // Colors
 $white: #fff;
