--- a/anna-web2-hw-files-main/dev/scss/helpers/_variables.scss
+++ b/anna-web2-hw-files-main/dev/scss/helpers/_variables.scss
@@ -21,4 +21,10 @@ $screen-xl-hero-2-min: 1350px;
 // Colors
 $white: #fff;
 $black: #000;
-
+$nightdark: #2A3036;
+$brightstar: #F8F9FA;
+$eletricglow: #FFD205;
+$eletricglowdark: #E2BA06;
+$alpinefrost: #E0DFD5;
+$brightstar: #F8F9FA;
+$brightstardark: #ADB5BD;
