--- a/anna-web2-hw-files-main/dev/scss/sections/_hero.scss
+++ b/anna-web2-hw-files-main/dev/scss/sections/_hero.scss
@@ -30,4 +30,9 @@ HERO
             }
         }
     }
+    div{
+        section{
+            background-color: $eletricglow;
+        }
+    }
 }
