--- a/anna-web2-hw-files-main/dev/scss/sections/_new.scss
+++ b/anna-web2-hw-files-main/dev/scss/sections/_new.scss
@@ -87,5 +87,12 @@
                 }
             }
         }
+    } 
+    
+    div{
+        ul{
+            button{
+                background-color: $$eletricglow;
+            }
     }
 }
