--- a/anna-web2-hw-files-main/dev/scss/sections/_search.scss
+++ b/anna-web2-hw-files-main/dev/scss/sections/_search.scss
@@ -18,5 +18,11 @@
                 }
             }
         }
+
+        form{
+            button{
+                background-color: $eletricglow;
+            }
+        }
     }
 }
