--- a/anna-web2-hw-files-main/dev/scss/layout/_header.scss
+++ b/anna-web2-hw-files-main/dev/scss/layout/_header.scss
@@ -2,6 +2,7 @@
     Header
 ============= */
 header{
+    background-color: $nightdark;
     display: grid;
     grid-template-columns: 16px auto 16px;
     grid-template-areas: ". header .";
