--- a/anna-web2-hw-files-main/dev/scss/sections/_hero.scss
+++ b/anna-web2-hw-files-main/dev/scss/sections/_hero.scss
@@ -3,6 +3,13 @@ HERO
 =========== */
 
 #hero{
+    background-image: url('..img/hero/hero.jpg');
+    background-position: center center;
+    height: 260px;
+
+    @include md {
+        height: 496px;
+    }
     img{
         width: 100%;
     }
